# FkCrypter

./: CMakeLists.txt  README.md  native-lib.cpp  skCrypter.h  xxtea.cpp  xxtea.h
